# order/internal/repository/entity/order.go
@@ -1,1 +1,11 @@
 package entity
+
+type Order struct {
+	OrderUuid       string
+	UserUuid        string
+	PartUuids       []string
+	TotalPrice      float64
+	TransactionUuid string
+	PaymentMethod   string
+	Status          string
+}
